--- a/arch/arm/boot/dts/sama5d3xmb.dtsi
+++ b/arch/arm/boot/dts/sama5d3xmb.dtsi
@@ -45,6 +45,12 @@
 				wm8904_before_revD: wm8904@1a {
 					compatible = "wm8904";
 					reg = <0x1a>;
+
+					DCVDD-supply = <&wm8904_1v8_power>;
+					DBVDD-supply = <&wm8904_3v3_power>;
+					AVDD-supply = <&wm8904_1v8_power>;
+					CPVDD-supply = <&wm8904_1v8_power>;
+					MICVDD-supply = <&wm8904_3v3_power>;
 				};
 			};
 
@@ -52,6 +58,12 @@
 				wm8904: wm8904@1a {
 					compatible = "wm8904";
 					reg = <0x1a>;
+
+					DCVDD-supply = <&wm8904_1v8_power>;
+					DBVDD-supply = <&wm8904_3v3_power>;
+					AVDD-supply = <&wm8904_1v8_power>;
+					CPVDD-supply = <&wm8904_1v8_power>;
+					MICVDD-supply = <&wm8904_3v3_power>;
 				};
 			};
 
@@ -232,5 +244,21 @@
 		atmel,audio-codec = <&wm8904>;
 		atmel,audio-codec-before-revD = <&wm8904_before_revD>;
 		status = "disabled";
+	};
+
+	wm8904_3v3_power: wm8904_3v3_reg {
+		compatible = "regulator-fixed";
+		regulator-name = "wm8904_3v3";
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+		regulator-always-on;
+	};
+
+	wm8904_1v8_power: wm8904_1v8_reg {
+		compatible = "regulator-fixed";
+		regulator-name = "wm8904_1v8";
+		regulator-min-microvolt = <1800000>;
+		regulator-max-microvolt = <1800000>;
+		regulator-always-on;
 	};
 };
