sama5d3xek: Modifty sama5d3xmb.dtsi to adapt to rev.D MB
In the meantime rename the old sama5d3xmb.dtsi to sama5d3xmb_revc.dtsi.

The difference between revC and revD MB is the wm8904 is moved
from TWI0 to TWI1.

Signed-off-by: Josh Wu <josh.wu@atmel.com>

--- a/arch/arm/boot/dts/sama5d3xmb_revc.dtsi
+++ b/arch/arm/boot/dts/sama5d3xmb_revc.dtsi
@@ -32,7 +32,12 @@
 				};
 			};
 
-			i2c1: i2c@f0018000 {
+			/*
+			 * i2c0 conflicts with ISI:
+			 * disable it to allow the use of ISI
+			 * can not enable audio when i2c0 disabled
+			 */
+			i2c0: i2c@f0014000 {
 				wm8904: wm8904@1a {
 					compatible = "wm8904";
 					reg = <0x1a>;
