sama5d3xek: enable both ISI and sound for sama5d3xek board
In latest rev.D MB, it support both ISI and sound.

Signed-off-by: Josh Wu <josh.wu@atmel.com>

--- a/arch/arm/boot/dts/sama5d31ek_pda4.dts
+++ b/arch/arm/boot/dts/sama5d31ek_pda4.dts
@@ -25,10 +25,15 @@
 			};
 
 			i2c0: i2c@f0014000 {
-				status = "okay";
+				status = "disabled";
 			};
 
 			i2c1: i2c@f0018000 {
+				status = "okay";
+			};
+
+			/* ISI VSYNC/HSYNC Conflict with i2c0 */
+			isi: isi@f0034000 {
 				status = "okay";
 			};
 
@@ -42,6 +47,8 @@
 		d3 {
 			label = "d3";
 			gpios = <&pioE 24 GPIO_ACTIVE_HIGH>;
+			/* Conflict with ISI module's reset pin */
+			status = "disabled";
 		};
 	};
 
