--- a/arch/arm/boot/dts/sama5d35ek.dts
+++ b/arch/arm/boot/dts/sama5d35ek.dts
@@ -28,10 +28,15 @@
 			};
 
 			i2c0: i2c@f0014000 {
-				status = "okay";
+				status = "disabled";
 			};
 
 			i2c1: i2c@f0018000 {
+				status = "okay";
+			};
+
+			/* ISI VSYNC/HSYNC Conflict with i2c0 */
+			isi: isi@f0034000 {
 				status = "okay";
 			};
 
@@ -62,5 +67,3 @@
 		};
 	};
 };
-
-/include/ "sama5d3xmb_isi.dtsi"
