--- a/arch/arm/boot/dts/sama5d36ek.dts
+++ b/arch/arm/boot/dts/sama5d36ek.dts
@@ -29,10 +29,15 @@
 			};
 
 			i2c0: i2c@f0014000 {
-				status = "okay";
+				status = "disabled";
 			};
 
 			i2c1: i2c@f0018000 {
+				status = "okay";
+			};
+
+			/* ISI VSYNC/HSYNC Conflict with i2c0 */
+			isi: isi@f0034000 {
 				status = "okay";
 			};
 
@@ -50,6 +55,8 @@
 		d3 {
 			label = "d3";
 			gpios = <&pioE 24 GPIO_ACTIVE_HIGH>;
+			/* Conflict with ISI module's reset pin */
+			status = "disabled";
 		};
 	};
 
@@ -57,5 +64,3 @@
 		status = "okay";
 	};
 };
-
-/include/ "sama5d3xmb_isi.dtsi"
