sama5d3xek: rename sama5d3xmb_isi.dtsi to sama5d3xmb_revc_isi.dtsi
Only rev.C dts file need ISI or sound selection. So rename it.

Signed-off-by: Josh Wu <josh.wu@atmel.com>

--- a/arch/arm/boot/dts/sama5d31ek_revc.dts
+++ b/arch/arm/boot/dts/sama5d31ek_revc.dts
@@ -51,4 +51,4 @@
 };
 
 /* Uncomment following line will enable ISI support */
-/* /include/ "sama5d3xmb_isi.dtsi" */
+/* /include/ "sama5d3xmb_revc_isi.dtsi" */
