--- a/arch/arm/boot/dts/sama5d33ek_revc.dts
+++ b/arch/arm/boot/dts/sama5d33ek_revc.dts
@@ -51,4 +51,4 @@
 };
 
 /* Uncomment following line will enable ISI support */
-/* /include/ "sama5d3xmb_isi.dtsi" */
+/* /include/ "sama5d3xmb_revc_isi.dtsi" */
