--- a/arch/arm/boot/dts/at91sam9g35ek.dts
+++ b/arch/arm/boot/dts/at91sam9g35ek.dts
@@ -15,18 +15,29 @@
 	model = "Atmel AT91SAM9G35-EK";
 	compatible = "atmel,at91sam9g35ek", "atmel,at91sam9x5ek", "atmel,at91sam9x5", "atmel,at91sam9";
 
-	ahb {
-		apb {
-			macb0: ethernet@f802c000 {
-				phy-mode = "rmii";
-				status = "okay";
-			};
+   
 
-			hlcdc: hlcdc@f8038000 {
-				status = "okay";
-			};
-		};
-	};
+
+  ahb {
+    apb {
+macb0: ethernet@f802c000 {
+         phy-mode = "rmii";
+         status = "okay";
+       };
+
+hlcdc: hlcdc@f8038000 {
+         status = "okay";
+       };
+
+pwm0: pwm@f8034000 {
+        status = "okay";
+      };
+
+      rtc@fffffeb0 {
+        status = "okay";
+      };
+    };
+  };
 
 	backlight: backlight {
 		status = "okay";
