--- a/arch/arm/boot/dts/at91sam9x5.dtsi
+++ b/arch/arm/boot/dts/at91sam9x5.dtsi
@@ -52,29 +52,22 @@
 		reg = <0x20000000 0x10000000>;
 	};
 
-	clocks {
-		slow_xtal: slow_xtal {
-			compatible = "fixed-clock";
-			#clock-cells = <0>;
-			clock-frequency = <0>;
-		};
-
-		main_xtal: main_xtal {
-			compatible = "fixed-clock";
-			#clock-cells = <0>;
-			clock-frequency = <0>;
-		};
-
-		adc_op_clk: adc_op_clk{
-			compatible = "fixed-clock";
-			#clock-cells = <0>;
-			clock-frequency = <1000000>;
-		};
+	slow_xtal: slow_xtal {
+		compatible = "fixed-clock";
+		#clock-cells = <0>;
+		clock-frequency = <0>;
 	};
 
-	sram: sram@00300000 {
-		compatible = "mmio-sram";
-		reg = <0x00300000 0x8000>;
+	main_xtal: main_xtal {
+		compatible = "fixed-clock";
+		#clock-cells = <0>;
+		clock-frequency = <0>;
+	};
+
+	adc_op_clk: adc_op_clk{
+		compatible = "fixed-clock";
+		#clock-cells = <0>;
+		clock-frequency = <5000000>;
 	};
 
 	ahb {
@@ -100,13 +93,11 @@
 			ramc0: ramc@ffffe800 {
 				compatible = "atmel,at91sam9g45-ddramc";
 				reg = <0xffffe800 0x200>;
-				clocks = <&ddrck>;
-				clock-names = "ddrck";
 			};
 
 			pmc: pmc@fffffc00 {
-				compatible = "atmel,at91sam9x5-pmc", "syscon";
-				reg = <0xfffffc00 0x200>;
+				compatible = "atmel,at91sam9x5-pmc";
+				reg = <0xfffffc00 0x100>;
 				interrupts = <1 IRQ_TYPE_LEVEL_HIGH 7>;
 				interrupt-controller;
 				#address-cells = <1>;
@@ -149,8 +140,8 @@
 								       595000000 650000000 3 0
 								       545000000 600000000 0 1
 								       495000000 555000000 1 1
-								       445000000 500000000 2 1
-								       400000000 450000000 3 1>;
+								       445000000 500000000 1 2
+								       400000000 450000000 1 3>;
 				};
 
 				plladiv: plladivck {
@@ -376,13 +367,11 @@
 			rstc@fffffe00 {
 				compatible = "atmel,at91sam9g45-rstc";
 				reg = <0xfffffe00 0x10>;
-				clocks = <&clk32k>;
 			};
 
 			shdwc@fffffe10 {
 				compatible = "atmel,at91sam9x5-shdwc";
 				reg = <0xfffffe10 0x10>;
-				clocks = <&clk32k>;
 			};
 
 			pit: timer@fffffe30 {
@@ -420,16 +409,16 @@
 				compatible = "atmel,at91sam9x5-tcb";
 				reg = <0xf8008000 0x100>;
 				interrupts = <17 IRQ_TYPE_LEVEL_HIGH 0>;
-				clocks = <&tcb0_clk>, <&clk32k>;
-				clock-names = "t0_clk", "slow_clk";
+				clocks = <&tcb0_clk>;
+				clock-names = "t0_clk";
 			};
 
 			tcb1: timer@f800c000 {
 				compatible = "atmel,at91sam9x5-tcb";
 				reg = <0xf800c000 0x100>;
 				interrupts = <17 IRQ_TYPE_LEVEL_HIGH 0>;
-				clocks = <&tcb0_clk>, <&clk32k>;
-				clock-names = "t0_clk", "slow_clk";
+				clocks = <&tcb0_clk>;
+				clock-names = "t0_clk";
 			};
 
 			dma0: dma-controller@ffffec00 {
@@ -457,6 +446,56 @@
 				ranges = <0xfffff400 0xfffff400 0x800>;
 
 				/* shared pinctrl settings */
+				adc0 {
+					pinctrl_adc0_ad0: adc0_ad0 {
+						atmel,pins =
+							<AT91_PIOB 11 AT91_PERIPH_GPIO AT91_PINCTRL_NONE>; /* conflicts with PWM0 */
+					};
+
+					pinctrl_adc0_ad1: adc0_ad1 {
+						atmel,pins =
+							<AT91_PIOB 12 AT91_PERIPH_GPIO AT91_PINCTRL_NONE>; /* conflicts with PWM1 */
+					};
+
+					pinctrl_adc0_ad2: adc0_ad2 {
+						atmel,pins =
+							<AT91_PIOB 13 AT91_PERIPH_GPIO AT91_PINCTRL_NONE>; /* conflicts with PWM2 */
+					};
+
+					pinctrl_adc0_ad3: adc0_ad3 {
+						atmel,pins =
+							<AT91_PIOB 14 AT91_PERIPH_GPIO AT91_PINCTRL_NONE>; /* conflicts with PWM3 */
+					};
+					pinctrl_adc0_ad6: adc0_ad6 {
+						atmel,pins =
+							<AT91_PIOB 17 AT91_PERIPH_GPIO AT91_PINCTRL_NONE>; 
+					};
+					pinctrl_adc0_ad4_9: adc0_ad4_9 {
+						atmel,pins =
+							<AT91_PIOB 15 AT91_PERIPH_GPIO AT91_PINCTRL_NONE
+							 AT91_PIOB 16 AT91_PERIPH_GPIO AT91_PINCTRL_NONE
+							 AT91_PIOB 17 AT91_PERIPH_GPIO AT91_PINCTRL_NONE
+							 AT91_PIOB  6 AT91_PERIPH_GPIO AT91_PINCTRL_NONE
+							 AT91_PIOB  7 AT91_PERIPH_GPIO AT91_PINCTRL_NONE
+							 AT91_PIOB  8 AT91_PERIPH_GPIO AT91_PINCTRL_NONE>;
+					};
+
+					pinctrl_adc0_ad10: adc0_ad10 {
+						atmel,pins =
+							<AT91_PIOB 9 AT91_PERIPH_GPIO AT91_PINCTRL_NONE>; /* conflicts with PCK1 */
+					};
+
+					pinctrl_adc0_ad11: adc0_ad11 {
+						atmel,pins =
+							<AT91_PIOB 10 AT91_PERIPH_GPIO AT91_PINCTRL_NONE>; /* conflicts with PCK0 */
+					};
+
+					pinctrl_adc0_adtrg: adc0_adtrg {
+						atmel,pins =
+							<AT91_PIOB 18 AT91_PERIPH_B AT91_PINCTRL_NONE>;
+					};
+				};
+
 				dbgu {
 					pinctrl_dbgu: dbgu-0 {
 						atmel,pins =
@@ -507,7 +546,7 @@
 
 					pinctrl_usart1_sck: usart1_sck-0 {
 						atmel,pins =
-							<AT91_PIOC 29 AT91_PERIPH_C AT91_PINCTRL_NONE>;	/* PC29 periph C */
+							<AT91_PIOC 28 AT91_PERIPH_C AT91_PINCTRL_NONE>;	/* PC29 periph C */
 					};
 				};
 
@@ -699,46 +738,42 @@
 				pwm0 {
 					pinctrl_pwm0_pwm0_0: pwm0_pwm0-0 {
 						atmel,pins =
-							<AT91_PIOB 11 AT91_PERIPH_B AT91_PINCTRL_NONE>;
+							<AT91_PIOB 11 AT91_PERIPH_B AT91_PINCTRL_NONE>; /* conflicts with AD0 */
 					};
+
 					pinctrl_pwm0_pwm0_1: pwm0_pwm0-1 {
 						atmel,pins =
-							<AT91_PIOC 10 AT91_PERIPH_C AT91_PINCTRL_NONE>;
-					};
-					pinctrl_pwm0_pwm0_2: pwm0_pwm0-2 {
-						atmel,pins =
-							<AT91_PIOC 18 AT91_PERIPH_C AT91_PINCTRL_NONE>;
+							<AT91_PIOC 18 AT91_PERIPH_C AT91_PINCTRL_NONE>; /* conflicts with LCDDAT18 */
 					};
 
 					pinctrl_pwm0_pwm1_0: pwm0_pwm1-0 {
 						atmel,pins =
-							<AT91_PIOB 12 AT91_PERIPH_B AT91_PINCTRL_NONE>;
+							<AT91_PIOB 12 AT91_PERIPH_B AT91_PINCTRL_NONE>; /* conflicts with AD1 */
 					};
+
 					pinctrl_pwm0_pwm1_1: pwm0_pwm1-1 {
 						atmel,pins =
-							<AT91_PIOC 11 AT91_PERIPH_C AT91_PINCTRL_NONE>;
-					};
-					pinctrl_pwm0_pwm1_2: pwm0_pwm1-2 {
-						atmel,pins =
-							<AT91_PIOC 19 AT91_PERIPH_C AT91_PINCTRL_NONE>;
+							<AT91_PIOC 19 AT91_PERIPH_C AT91_PINCTRL_NONE>; /* conflicts with LCDDAT19 */
 					};
 
 					pinctrl_pwm0_pwm2_0: pwm0_pwm2-0 {
 						atmel,pins =
-							<AT91_PIOB 13 AT91_PERIPH_B AT91_PINCTRL_NONE>;
+							<AT91_PIOB 13 AT91_PERIPH_B AT91_PINCTRL_NONE>; /* conflicts with AD2 */
 					};
+
 					pinctrl_pwm0_pwm2_1: pwm0_pwm2-1 {
 						atmel,pins =
-							<AT91_PIOC 20 AT91_PERIPH_C AT91_PINCTRL_NONE>;
+							<AT91_PIOC 20 AT91_PERIPH_C AT91_PINCTRL_NONE>; /* conflicts with LCDDAT20 */
 					};
 
 					pinctrl_pwm0_pwm3_0: pwm0_pwm3-0 {
 						atmel,pins =
-							<AT91_PIOB 14 AT91_PERIPH_B AT91_PINCTRL_NONE>;
+							<AT91_PIOB 14 AT91_PERIPH_B AT91_PINCTRL_NONE>; /* conflicts with AD3 */
 					};
+
 					pinctrl_pwm0_pwm3_1: pwm0_pwm3-1 {
 						atmel,pins =
-							<AT91_PIOC 21 AT91_PERIPH_C AT91_PINCTRL_NONE>;
+							<AT91_PIOC 21 AT91_PERIPH_C AT91_PINCTRL_NONE>; /* conflicts with LCDDAT21 */
 					};
 				};
 
@@ -908,14 +943,11 @@
 			};
 
 			dbgu: serial@fffff200 {
-				compatible = "atmel,at91sam9260-dbgu", "atmel,at91sam9260-usart";
+				compatible = "atmel,at91sam9260-usart";
 				reg = <0xfffff200 0x200>;
 				interrupts = <1 IRQ_TYPE_LEVEL_HIGH 7>;
 				pinctrl-names = "default";
 				pinctrl-0 = <&pinctrl_dbgu>;
-				dmas = <&dma1 1 AT91_DMA_CFG_PER_ID(8)>,
-				       <&dma1 1 (AT91_DMA_CFG_PER_ID(9) | AT91_DMA_CFG_FIFOCFG_ASAP)>;
-				dma-names = "tx", "rx";
 				clocks = <&mck>;
 				clock-names = "usart";
 				status = "disabled";
@@ -927,9 +959,6 @@
 				interrupts = <5 IRQ_TYPE_LEVEL_HIGH 5>;
 				pinctrl-names = "default";
 				pinctrl-0 = <&pinctrl_usart0>;
-				dmas = <&dma0 1 AT91_DMA_CFG_PER_ID(3)>,
-				       <&dma0 1 (AT91_DMA_CFG_PER_ID(4) | AT91_DMA_CFG_FIFOCFG_ASAP)>;
-				dma-names = "tx", "rx";
 				clocks = <&usart0_clk>;
 				clock-names = "usart";
 				status = "disabled";
@@ -941,9 +970,6 @@
 				interrupts = <6 IRQ_TYPE_LEVEL_HIGH 5>;
 				pinctrl-names = "default";
 				pinctrl-0 = <&pinctrl_usart1>;
-				dmas = <&dma0 1 AT91_DMA_CFG_PER_ID(5)>,
-				       <&dma0 1 (AT91_DMA_CFG_PER_ID(6) | AT91_DMA_CFG_FIFOCFG_ASAP)>;
-				dma-names = "tx", "rx";
 				clocks = <&usart1_clk>;
 				clock-names = "usart";
 				status = "disabled";
@@ -955,9 +981,6 @@
 				interrupts = <7 IRQ_TYPE_LEVEL_HIGH 5>;
 				pinctrl-names = "default";
 				pinctrl-0 = <&pinctrl_usart2>;
-				dmas = <&dma1 1 AT91_DMA_CFG_PER_ID(12)>,
-				       <&dma1 1 (AT91_DMA_CFG_PER_ID(13) | AT91_DMA_CFG_FIFOCFG_ASAP)>;
-				dma-names = "tx", "rx";
 				clocks = <&usart2_clk>;
 				clock-names = "usart";
 				status = "disabled";
@@ -1039,15 +1062,16 @@
 				clocks = <&adc_clk>,
 					 <&adc_op_clk>;
 				clock-names = "adc_clk", "adc_op_clk";
+				/*
 				atmel,adc-use-external-triggers;
+				*/
 				atmel,adc-channels-used = <0xffff>;
 				atmel,adc-vref = <3300>;
 				atmel,adc-startup-time = <40>;
-				atmel,adc-sample-hold-time = <11>;
 				atmel,adc-res = <8 10>;
 				atmel,adc-res-names = "lowres", "highres";
 				atmel,adc-use-res = "highres";
-
+				/*
 				trigger@0 {
 					reg = <0>;
 					trigger-name = "external-rising";
@@ -1074,6 +1098,7 @@
 					trigger-name = "continuous";
 					trigger-value = <0x6>;
 				};
+				*/
 			};
 
 			spi0: spi@f0000000 {
@@ -1111,11 +1136,11 @@
 			usb2: gadget@f803c000 {
 				#address-cells = <1>;
 				#size-cells = <0>;
-				compatible = "atmel,at91sam9g45-udc";
+				compatible = "atmel,at91sam9rl-udc";
 				reg = <0x00500000 0x80000
 				       0xf803c000 0x400>;
 				interrupts = <23 IRQ_TYPE_LEVEL_HIGH 0>;
-				clocks = <&utmi>, <&udphs_clk>;
+				clocks = <&usb>, <&udphs_clk>;
 				clock-names = "hclk", "pclk";
 				status = "disabled";
 
@@ -1176,10 +1201,12 @@
 				compatible = "atmel,at91sam9260-wdt";
 				reg = <0xfffffe40 0x10>;
 				interrupts = <1 IRQ_TYPE_LEVEL_HIGH 7>;
-				clocks = <&clk32k>;
-				atmel,watchdog-type = "hardware";
+				atmel,watchdog-type = "software";
 				atmel,reset-type = "all";
 				atmel,dbg-halt;
+				/*
+				atmel,idle-halt;
+				*/
 				status = "disabled";
 			};
 
@@ -1187,7 +1214,6 @@
 				compatible = "atmel,at91sam9x5-rtc";
 				reg = <0xfffffeb0 0x40>;
 				interrupts = <1 IRQ_TYPE_LEVEL_HIGH 7>;
-				clocks = <&clk32k>;
 				status = "disabled";
 			};
 
@@ -1195,8 +1221,8 @@
 				compatible = "atmel,at91sam9rl-pwm";
 				reg = <0xf8034000 0x300>;
 				interrupts = <18 IRQ_TYPE_LEVEL_HIGH 4>;
-				clocks = <&pwm_clk>;
 				#pwm-cells = <3>;
+				clocks = <&pwm_clk>;
 				status = "disabled";
 			};
 		};
@@ -1227,8 +1253,8 @@
 			compatible = "atmel,at91rm9200-ohci", "usb-ohci";
 			reg = <0x00600000 0x100000>;
 			interrupts = <22 IRQ_TYPE_LEVEL_HIGH 2>;
-			clocks = <&uhphs_clk>, <&uhphs_clk>, <&uhpck>;
-			clock-names = "ohci_clk", "hclk", "uhpck";
+			clocks = <&usb>, <&uhphs_clk>, <&uhphs_clk>, <&uhpck>;
+			clock-names = "usb_clk", "ohci_clk", "hclk", "uhpck";
 			status = "disabled";
 		};
 
@@ -1236,8 +1262,8 @@
 			compatible = "atmel,at91sam9g45-ehci", "usb-ehci";
 			reg = <0x00700000 0x100000>;
 			interrupts = <22 IRQ_TYPE_LEVEL_HIGH 2>;
-			clocks = <&utmi>, <&uhphs_clk>;
-			clock-names = "usb_clk", "ehci_clk";
+			clocks = <&usb>, <&uhphs_clk>, <&uhpck>;
+			clock-names = "usb_clk", "ehci_clk", "uhpck";
 			status = "disabled";
 		};
 	};
