modified:   arch/arm/configs/hach-at91sam9g35_defconfig

--- a/arch/arm/configs/hach-at91sam9g35_defconfig
+++ b/arch/arm/configs/hach-at91sam9g35_defconfig
@@ -440,7 +440,7 @@ CONFIG_AUTO_ZRELADDR=y
 #
 # At least one emulation must be selected
 #
-# CONFIG_VFP is not set
+CONFIG_VFP=y
 
 #
 # Userspace binary formats
