--- a/arch/arm/boot/dts/at91sam9g35ek.dts
+++ b/arch/arm/boot/dts/at91sam9g35ek.dts
@@ -25,6 +25,9 @@
 			hlcdc: hlcdc@f8038000 {
 				status = "okay";
 			};
+pwm0: pwm@f8034000 {
+        status = "okay";
+      };
 		};
 	};
 
@@ -43,4 +46,100 @@
 	panel_reg: panel_regulator {
 		status = "okay";
 	};
+ 
+  gpio_keys {
+    compatible = "gpio-keys";
+
+    /* Keypad button is HOME */
+    button_0 {
+      debounce_interval = <50>;
+      label = "button 0";
+      gpios = <&pioC 16 GPIO_ACTIVE_LOW>;
+      linux,code = <102>;
+      gpio-key,wakeup;
+    };
+
+    /* Keypad button is ENTER */
+  button_1 {
+      debounce_interval = <50>;
+      label = "button 1";
+      gpios = <&pioC 17 GPIO_ACTIVE_LOW>;
+      linux,code = <28>;
+      gpio-key,wakeup;
+    };
+
+   /* Currently KEY_Q */
+   /* Keypad button is DIAG */
+  button_2 {
+      debounce_interval = <50>;
+      label = "button 2";
+      gpios = <&pioC 18 GPIO_ACTIVE_LOW>;
+      linux,code = <16>;
+      gpio-key,wakeup;
+    };
+
+
+    /* Currently KEY_RIGHT */
+   /* Keypad button is RIGHT ARROW */
+   button_3 {
+      debounce_interval = <50>;
+      label = "button 3";
+      gpios = <&pioC 19 GPIO_ACTIVE_LOW>;
+      linux,code = <106>;
+      gpio-key,wakeup;
+    };
+
+
+
+    /* Currently KEY_UP */
+    /* Keypad button is UP ARROW */
+    button_4 {
+      debounce_interval = <50>;
+      label = "button 4";
+      gpios = <&pioC 20 GPIO_ACTIVE_LOW>;
+      linux,code = <103>;
+      gpio-key,wakeup;
+    };
+
+    /* Currently KEY_DOWN */
+    /* Keypad button is DOWN ARROW */
+    button_5 {
+      debounce_interval = <50>;
+      label = "button 5";
+      gpios = <&pioC 21 GPIO_ACTIVE_LOW>;
+      linux,code = <108>;
+      gpio-key,wakeup;
+    };
+
+    /* Currently KEY_LEFT */
+    /* Keypad button is LEFT ARROW */
+    button_6 {
+      debounce_interval = <50>;
+      label = "button 6";
+      gpios = <&pioC 22 GPIO_ACTIVE_LOW>;
+      linux,code = <105>;
+      gpio-key,wakeup;
+    };
+
+    /* Currently KEY_O */
+    /* Keypad button MENU */
+
+    button_7 {
+      debounce_interval = <50>;
+      label = "button 7";
+      gpios = <&pioC 23 GPIO_ACTIVE_LOW>;
+      linux,code = <24>;
+      gpio-key,wakeup;
+    };
+
+  /* Keypad button Back */
+    button_8 {
+      debounce_interval = <50>;
+      label = "button 8";
+ 
+      gpios = <&pioC 25 GPIO_ACTIVE_LOW>;
+      linux,code = <1>;
+      gpio-key,wakeup;
+    };
+  };
 };
