--- a/arch/arm/configs/hach-at91sam9g35_defconfig
+++ b/arch/arm/configs/hach-at91sam9g35_defconfig
@@ -1255,7 +1255,7 @@ CONFIG_GPIO_DEVRES=y
 CONFIG_OF_GPIO=y
 CONFIG_GPIOLIB_IRQCHIP=y
 # CONFIG_DEBUG_GPIO is not set
-# CONFIG_GPIO_SYSFS is not set
+CONFIG_GPIO_SYSFS=y
 
 #
 # Memory mapped GPIO drivers
